--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -1,268 +1,287 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598275788035
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from azureml.core import Workspace, Experiment\n",
-    "\n",
-    "ws = Workspace.get(name=\"udacity-project\")\n",
-    "exp = Experiment(workspace=ws, name=\"udacity-project\")\n",
-    "\n",
-    "print('Workspace name: ' + ws.name, \n",
-    "      'Azure region: ' + ws.location, \n",
-    "      'Subscription id: ' + ws.subscription_id, \n",
-    "      'Resource group: ' + ws.resource_group, sep = '\\n')\n",
-    "\n",
-    "run = exp.start_logging()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598275788675
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "from azureml.core import Workspace, Experiment\n",
+        "\n",
+        "ws = Workspace.get(name=\"quick-starts-ws-131437\")\n",
+        "exp = Experiment(workspace=ws, name=\"udacity-project\")\n",
+        "\n",
+        "print('Workspace name: ' + ws.name, \n",
+        "      'Azure region: ' + ws.location, \n",
+        "      'Subscription id: ' + ws.subscription_id, \n",
+        "      'Resource group: ' + ws.resource_group, sep = '\\n')\n",
+        "\n",
+        "run = exp.start_logging()"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Workspace name: quick-starts-ws-131437\n",
+            "Azure region: southcentralus\n",
+            "Subscription id: 48a74bb7-9950-4cc1-9caa-5d50f995cc55\n",
+            "Resource group: aml-quickstarts-131437\n"
+          ]
+        }
+      ],
+      "execution_count": 5,
+      "metadata": {
+        "gather": {
+          "logged": 1608702177017
+        }
+      }
     },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+    {
+      "cell_type": "code",
+      "source": [
+        "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+        "\n",
+        "# TODO: Create compute cluster\n",
+        "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
+        "# max_nodes should be no greater than 4.\n",
+        "compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',vm_priority='lowpriority',max_nodes=4)\n",
+        "\n",
+        "compute_target = ComputeTarget.create(ws, \"compute-bank-1\", compute_config)"
+      ],
+      "outputs": [],
+      "execution_count": 9,
+      "metadata": {
+        "gather": {
+          "logged": 1608702477941
+        },
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from azureml.widgets import RunDetails\n",
+        "from azureml.train.sklearn import SKLearn\n",
+        "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
+        "from azureml.train.hyperdrive.policy import BanditPolicy\n",
+        "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
+        "from azureml.train.hyperdrive import uniform, choice\n",
+        "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
+        "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
+        "import os\n",
+        "import train\n",
+        "\n",
+        "# Specify parameter sampler\n",
+        "ps = RandomParameterSampling(\n",
+        "    {\n",
+        "    \"C\": uniform(0.5,1.5),\n",
+        "    \"max_iter\": uniform(50, 150)\n",
+        "    }, \n",
+        "    properties=None)\n",
+        "\n",
+        "# Specify a Policy\n",
+        "policy = BanditPolicy(slack_factor=0.1, evaluation_interval=1, delay_evaluation=5)\n",
+        "\n",
+        "if \"training\" not in os.listdir():\n",
+        "    os.mkdir(\"./training\")\n",
+        "\n",
+        "# Create a SKLearn estimator for use with train.py\n",
+        "est = train()\n",
+        "\n",
+        "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
+        "hyperdrive_config = ### YOUR CODE HERE ###"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "gather": {
+          "logged": 1598275789986
+        },
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
+        "\n",
+        "### YOUR CODE HERE ###"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import joblib\n",
+        "# Get your best run and save the model from that run.\n",
+        "\n",
+        "### YOUR CODE HERE ###"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "gather": {
+          "logged": 1598276310862
+        },
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from azureml.data.dataset_factory import TabularDatasetFactory\n",
+        "\n",
+        "# Create TabularDataset using TabularDatasetFactory\n",
+        "# Data is available at: \n",
+        "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
+        "\n",
+        "### YOUR CODE HERE ###"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from train import clean_data\n",
+        "\n",
+        "# Use the clean_data function to clean your data.\n",
+        "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "gather": {
+          "logged": 1598275726969
+        },
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from azureml.train.automl import AutoMLConfig\n",
+        "\n",
+        "# Set parameters for AutoMLConfig\n",
+        "# NOTE: DO NOT CHANGE THE experiment_timeout_minutes PARAMETER OR YOUR INSTANCE WILL TIME OUT.\n",
+        "# If you wish to run the experiment longer, you will need to run this notebook in your own\n",
+        "# Azure tenant, which will incur personal costs.\n",
+        "automl_config = AutoMLConfig(\n",
+        "    experiment_timeout_minutes=30,\n",
+        "    task=,\n",
+        "    primary_metric=,\n",
+        "    training_data=,\n",
+        "    label_column_name=,\n",
+        "    n_cross_validations=)"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "gather": {
+          "logged": 1598275665403
+        },
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Submit your automl run\n",
+        "\n",
+        "### YOUR CODE HERE ###"
+      ],
+      "outputs": [],
+      "execution_count": 2,
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Retrieve and save your best automl model.\n",
+        "\n",
+        "### YOUR CODE HERE ###"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
+    }
+  ],
+  "metadata": {
+    "kernel_info": {
+      "name": "python3"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "language": "python",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.6.9",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
     },
     "nteract": {
-     "transient": {
-      "deleting": false
-     }
+      "version": "nteract-front-end@1.0.0"
     }
-   },
-   "outputs": [],
-   "source": [
-    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
-    "\n",
-    "# TODO: Create compute cluster\n",
-    "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
-    "# max_nodes should be no greater than 4.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598275789986
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from azureml.widgets import RunDetails\n",
-    "from azureml.train.sklearn import SKLearn\n",
-    "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
-    "from azureml.train.hyperdrive.policy import BanditPolicy\n",
-    "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
-    "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
-    "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
-    "import os\n",
-    "\n",
-    "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
-    "\n",
-    "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
-    "\n",
-    "if \"training\" not in os.listdir():\n",
-    "    os.mkdir(\"./training\")\n",
-    "\n",
-    "# Create a SKLearn estimator for use with train.py\n",
-    "est = ### YOUR CODE HERE ###\n",
-    "\n",
-    "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598276310862
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import joblib\n",
-    "# Get your best run and save the model from that run.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.data.dataset_factory import TabularDatasetFactory\n",
-    "\n",
-    "# Create TabularDataset using TabularDatasetFactory\n",
-    "# Data is available at: \n",
-    "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
-    "\n",
-    "### YOUR CODE HERE ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598275726969
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from train import clean_data\n",
-    "\n",
-    "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598275665403
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from azureml.train.automl import AutoMLConfig\n",
-    "\n",
-    "# Set parameters for AutoMLConfig\n",
-    "# NOTE: DO NOT CHANGE THE experiment_timeout_minutes PARAMETER OR YOUR INSTANCE WILL TIME OUT.\n",
-    "# If you wish to run the experiment longer, you will need to run this notebook in your own\n",
-    "# Azure tenant, which will incur personal costs.\n",
-    "automl_config = AutoMLConfig(\n",
-    "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Submit your automl run\n",
-    "\n",
-    "### YOUR CODE HERE ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Retrieve and save your best automl model.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
-   ]
-  }
- ],
- "metadata": {
-  "kernel_info": {
-   "name": "python3-azureml"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
-  },
-  "nteract": {
-   "version": "nteract-front-end@1.0.0"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
