--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -75,7 +75,6 @@
         "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
         "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
         "import os\n",
-        "import train\n",
         "\n",
         "# Specify parameter sampler\n",
         "ps = RandomParameterSampling(\n",
@@ -92,16 +91,31 @@
         "    os.mkdir(\"./training\")\n",
         "\n",
         "# Create a SKLearn estimator for use with train.py\n",
-        "est = train()\n",
+        "est = SKLearn(source_directory='.', compute_target = compute_target, vm_priority = 'lowpriority', entry_script='train.py')\n",
         "\n",
         "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-        "hyperdrive_config = ### YOUR CODE HERE ###"
+        "goal = PrimaryMetricGoal(\"MAXIMIZE\")\n",
+        "hyperdrive_config = HyperDriveConfig(ps,\n",
+        "    primary_metric_name='accuracy', \n",
+        "    primary_metric_goal=goal,\n",
+        "    max_total_runs = 100,\n",
+        "    max_concurrent_runs = 4,\n",
+        "    policy= policy,\n",
+        "    estimator = est)"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "'SKLearn' estimator is deprecated. Please use 'ScriptRunConfig' from 'azureml.core.script_run_config' with your own defined environment or the AzureML-Tutorial curated environment.\n"
+          ]
+        }
+      ],
+      "execution_count": 13,
       "metadata": {
         "gather": {
-          "logged": 1598275789986
+          "logged": 1608706050683
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -118,20 +132,53 @@
       "cell_type": "code",
       "source": [
         "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
-        "\n",
-        "### YOUR CODE HERE ###"
+        "run = exp.submit(hyperdrive_config)\n",
+        "RunDetails(run).show()\n",
+        "run.wait_for_completion()"
       ],
       "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      "execution_count": 16,
+      "metadata": {
+        "gather": {
+          "logged": 1608706339936
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 15,
+          "data": {
+            "text/plain": "{'runId': 'HD_8831281f-803f-4b40-ba65-b37798a54ae8',\n 'target': 'compute-bank-1',\n 'status': 'Canceled',\n 'startTimeUtc': '2020-12-23T06:52:18.836082Z',\n 'endTimeUtc': '2020-12-23T07:01:34.96119Z',\n 'error': {'error': {'code': 'UserError',\n   'message': 'User errors were found in at least one of the child runs.',\n   'messageParameters': {},\n   'details': []},\n  'time': '0001-01-01T00:00:00.000Z'},\n 'warnings': [{'source': 'SecondaryError',\n   'message': '{\\n  \"error\": {\\n    \"code\": \"UserError\",\\n    \"severity\": null,\\n    \"message\": \"User errors were found in at least one of the child runs.\",\\n    \"messageFormat\": null,\\n    \"messageParameters\": {},\\n    \"referenceCode\": null,\\n    \"detailsUri\": null,\\n    \"target\": null,\\n    \"details\": [],\\n    \"innerError\": null,\\n    \"debugInfo\": null\\n  },\\n  \"correlation\": null,\\n  \"environment\": null,\\n  \"location\": null,\\n  \"time\": \"0001-01-01T00:00:00+00:00\",\\n  \"componentName\": null\\n}'}],\n 'properties': {'primary_metric_config': '{\"name\": \"accuracy\", \"goal\": \"maximize\"}',\n  'resume_from': 'null',\n  'runTemplate': 'HyperDrive',\n  'azureml.runsource': 'hyperdrive',\n  'platform': 'AML',\n  'ContentSnapshotId': 'b2525023-af41-4179-bb77-f7d5642f00a3'},\n 'inputDatasets': [],\n 'outputDatasets': [],\n 'logFiles': {'azureml-logs/hyperdrive.txt': 'https://mlstrg131437.blob.core.windows.net/azureml/ExperimentRun/dcid.HD_8831281f-803f-4b40-ba65-b37798a54ae8/azureml-logs/hyperdrive.txt?sv=2019-02-02&sr=b&sig=vu28mMEOpQvQigObsPsLo1%2Fp5vzEWDXObMEpSnekpQc%3D&st=2020-12-23T06%3A51%3A37Z&se=2020-12-23T15%3A01%3A37Z&sp=r'}}"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 15,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1608706897299
+        }
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "import joblib\n",
-        "# Get your best run and save the model from that run.\n",
-        "\n",
-        "### YOUR CODE HERE ###"
+        "# Get your best run and save the model from that run.\n"
       ],
       "outputs": [],
       "execution_count": null,
@@ -158,8 +205,8 @@
         "# Create TabularDataset using TabularDatasetFactory\n",
         "# Data is available at: \n",
         "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
-        "\n",
-        "### YOUR CODE HERE ###"
+        "data_path = \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
+        "ds = TabularDatasetFactory(data_path, separator = ',')"
       ],
       "outputs": [],
       "execution_count": null,
