--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -433,37 +433,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(os.curdir)"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            ".\n"
-          ]
-        }
-      ],
-      "execution_count": 46,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "gather": {
-          "logged": 1608925625364
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#save the model\r\n",
+        "\r\n",
         "model_name = best_automl_run.properties['model_name']\r\n",
         "automl_model = automl_run.register_model(model_name = model_name)"
       ],
@@ -489,10 +460,21 @@
       "cell_type": "code",
       "source": [
         "#clean up resources\r\n",
-        "compute_target.delete()"
+        "try:\r\n",
+        "    compute_target.delete()\r\n",
+        "except:\r\n",
+        "    print('Compute target has been deleted')"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Compute target has been deleted\n"
+          ]
+        }
+      ],
+      "execution_count": 52,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -503,6 +485,9 @@
           "transient": {
             "deleting": false
           }
+        },
+        "gather": {
+          "logged": 1608933368368
         }
       }
     }
